InterpreteJavaCC/src/main/java/analizador/Gramatica.java
/* Generated By:JavaCC: Do not edit this line. Gramatica.java */
/** Analizador de expresiones aritmeticas sencillas. */
package Analizador;

import expresiones.Logica;
import expresiones.Operacion;
import expresiones.Relacional;
import salida.Salida;
import tabla.Tipo;
import instrucciones.Instruccion;
import instrucciones.Declaracion;
import instrucciones.Imprimir;
import expresiones.Valor;
import instrucciones.Funcion;
import java.util.ArrayList;
import instrucciones.Asignacion;
import instrucciones.Retorno;
import instrucciones.Llamada;
import instrucciones.Si;
import instrucciones.Para;
import instrucciones.Iteracion;
import instrucciones.Mientras;
import instrucciones.Detener;
import instrucciones.Continuar;

public class Gramatica implements GramaticaConstants {

    Salida salida = new Salida();

    public void setSalida(Salida salida){
        this.salida = salida;
    }

  final public void Analizar() throws ParseException {
 Instruccion ins;
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CADENA:
        case INT:
        case DOUBLE:
        case BOOLEAN:
        case FUNCION:
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        ins = Instruccion();
                              salida.agregarInstruccion(ins);
      }
      jj_consume_token(0);
    } catch (ParseException exc) {
        StringBuffer expected = new StringBuffer();
            for (int i = 0; i < exc.expectedTokenSequences.length; i++) {
                for (int j = 0; j < exc.expectedTokenSequences[i].length; j++) {
                    expected.append("\t"+tokenImage[exc.expectedTokenSequences[i][j]]).append("\n");
                }
            }
            salida.agregarErrorSintactico("Error en el token: \""
                    + exc.currentToken.next.image + "\"",exc.currentToken.next.beginLine,
                      exc.currentToken.next.beginColumn, expected.toString());
    }
  }

  final public Instruccion Instruccion() throws ParseException {
 Instruccion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA:
    case INT:
    case DOUBLE:
    case BOOLEAN:
      e = Declaracion();
                       {if (true) return e;}
      break;
    case IDENTIFICADOR:
      e = Asignacion();
                        {if (true) return e;}
      break;
    case FUNCION:
      e = Funcion();
                     {if (true) return e;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion InstruccionFuncion() throws ParseException {
 Instruccion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA:
    case INT:
    case DOUBLE:
    case BOOLEAN:
      e = Declaracion();
                       {if (true) return e;}
      break;
    case IMPRIMIR:
      e = Imprimir();
                      {if (true) return e;}
      break;
    case IDENTIFICADOR:
      e = Asignacion();
                        {if (true) return e;}
      break;
    case RETORNO:
      e = Retorno();
                     {if (true) return e;}
      break;
    case SI:
      e = Si();
                {if (true) return e;}
      break;
    case PARA:
      e = Para();
                  {if (true) return e;}
      break;
    case MIENTRAS:
      e = Mientras();
                      {if (true) return e;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Mientras() throws ParseException {
 Instruccion e; ArrayList<Instruccion> cuerpoCiclo = new ArrayList<Instruccion>();
    jj_consume_token(MIENTRAS);
    jj_consume_token(PARIZ);
    e = Expresion();
    jj_consume_token(PARDE);
    cuerpoCiclo = BloqueCiclo();
     {if (true) return new Mientras(e, cuerpoCiclo, token.beginLine, token.beginColumn, Tipo.MIENTRAS);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Para() throws ParseException {
 Instruccion d; Instruccion e; Iteracion i; ArrayList<Instruccion> cuerpoCiclo = new ArrayList<Instruccion>();
    jj_consume_token(PARA);
    jj_consume_token(PARIZ);
    d = DeclaracionCiclo();
    jj_consume_token(PCOMA);
    e = Expresion();
    jj_consume_token(PCOMA);
    i = Aumentar();
    jj_consume_token(PARDE);
    cuerpoCiclo = BloqueCiclo();
     {if (true) return new Para(Tipo.PARA, (Declaracion) d, e, i, cuerpoCiclo, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion DeclaracionCiclo() throws ParseException {
 Tipo t; Token tok; Instruccion e;
    t = Tipo();
    tok = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    e = Expresion();
                                                              {if (true) return new Declaracion(Tipo.DECLARACION,tok.image, e, t, tok.beginLine, tok.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Iteracion Aumentar() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENTO:
      jj_consume_token(INCREMENTO);
                  {if (true) return new Iteracion(Tipo.INCREMENTO, token.beginLine, token.beginColumn, Tipo.ITERACION);}
      break;
    case DECREMENTO:
      jj_consume_token(DECREMENTO);
                    {if (true) return new Iteracion(Tipo.DECREMENTO, token.beginLine, token.beginColumn, Tipo.ITERACION);}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Instruccion> BloqueCiclo() throws ParseException {
 ArrayList<Instruccion> instrucciones = new ArrayList<Instruccion>(); Instruccion e;
    jj_consume_token(LLAVE_I);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENA:
      case INT:
      case DOUBLE:
      case BOOLEAN:
      case IMPRIMIR:
      case PARA:
      case MIENTRAS:
      case DETENER:
      case CONTINUAR:
      case SI:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      e = InstruccionCiclo();
                                   instrucciones.add(e);
    }
    jj_consume_token(LLAVE_D);
                                                                       {if (true) return instrucciones;}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion InstruccionCiclo() throws ParseException {
 Instruccion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA:
    case INT:
    case DOUBLE:
    case BOOLEAN:
      e = Declaracion();
                       {if (true) return e;}
      break;
    case IMPRIMIR:
      e = Imprimir();
                      {if (true) return e;}
      break;
    case IDENTIFICADOR:
      e = Asignacion();
                        {if (true) return e;}
      break;
    case SI:
      e = Si();
                {if (true) return e;}
      break;
    case PARA:
      e = Para();
                  {if (true) return e;}
      break;
    case MIENTRAS:
      e = Mientras();
                      {if (true) return e;}
      break;
    case DETENER:
      e = Detener();
                     {if (true) return e;}
      break;
    case CONTINUAR:
      e = Continuar();
                       {if (true) return e;}
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Detener() throws ParseException {
 Instruccion e;
    jj_consume_token(DETENER);
    jj_consume_token(PCOMA);
                       {if (true) return new Detener(Tipo.DETENER);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Continuar() throws ParseException {
 Instruccion e;
    jj_consume_token(CONTINUAR);
    jj_consume_token(PCOMA);
                         {if (true) return new Continuar(Tipo.DETENER);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Si() throws ParseException {
    Instruccion e; ArrayList<Instruccion> cuerpoSi = new ArrayList<Instruccion>();
    ArrayList<Instruccion> cuerpoElse = new ArrayList<Instruccion>();
    jj_consume_token(SI);
    jj_consume_token(PARIZ);
    e = Expresion();
    jj_consume_token(PARDE);
    cuerpoSi = BloqueSi();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SINO:
      jj_consume_token(SINO);
      cuerpoElse = BloqueSi();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
         {if (true) return new Si(Tipo.SI, e, cuerpoSi, cuerpoElse, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Instruccion> BloqueSi() throws ParseException {
 ArrayList<Instruccion> instrucciones = new ArrayList<Instruccion>(); Instruccion e;
    jj_consume_token(LLAVE_I);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENA:
      case INT:
      case DOUBLE:
      case BOOLEAN:
      case IMPRIMIR:
      case PARA:
      case MIENTRAS:
      case RETORNO:
      case DETENER:
      case CONTINUAR:
      case SI:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      e = InstruccionSi();
                                instrucciones.add(e);
    }
    jj_consume_token(LLAVE_D);
                                                                    {if (true) return instrucciones;}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion InstruccionSi() throws ParseException {
 Instruccion e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA:
    case INT:
    case DOUBLE:
    case BOOLEAN:
      e = Declaracion();
                       {if (true) return e;}
      break;
    case IMPRIMIR:
      e = Imprimir();
                      {if (true) return e;}
      break;
    case IDENTIFICADOR:
      e = Asignacion();
                        {if (true) return e;}
      break;
    case RETORNO:
      e = Retorno();
                     {if (true) return e;}
      break;
    case SI:
      e = Si();
                {if (true) return e;}
      break;
    case PARA:
      e = Para();
                  {if (true) return e;}
      break;
    case MIENTRAS:
      e = Mientras();
                      {if (true) return e;}
      break;
    case DETENER:
      e = Detener();
                     {if (true) return e;}
      break;
    case CONTINUAR:
      e = Continuar();
                       {if (true) return e;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Funcion() throws ParseException {
 Token id; ArrayList<Instruccion> instrucciones; ArrayList<Declaracion> declaraciones; Tipo tipo;
    jj_consume_token(FUNCION);
    tipo = FuncionTipo();
    id = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PARIZ);
    declaraciones = ListaParametros();
    jj_consume_token(PARDE);
    instrucciones = Bloque();
     {if (true) return new Funcion(Tipo.FUNCION, id.image, declaraciones, instrucciones, tipo, id.beginLine, id.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Instruccion> Bloque() throws ParseException {
 ArrayList<Instruccion> instrucciones = new ArrayList<Instruccion>(); Instruccion e;
    jj_consume_token(LLAVE_I);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CADENA:
      case INT:
      case DOUBLE:
      case BOOLEAN:
      case IMPRIMIR:
      case PARA:
      case MIENTRAS:
      case RETORNO:
      case SI:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      e = InstruccionFuncion();
                                     instrucciones.add(e);
    }
    jj_consume_token(LLAVE_D);
                                                                         {if (true) return instrucciones;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Declaracion> ListaParametros() throws ParseException {
 ArrayList<Declaracion> lista = new ArrayList<Declaracion>(); Declaracion e; Tipo t; Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA:
    case INT:
    case DOUBLE:
    case BOOLEAN:
      t = Tipo();
      id = jj_consume_token(IDENTIFICADOR);
                                     lista.add(new Declaracion(Tipo.DECLARACION,id.image, null, t, id.beginLine, id.beginColumn));
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMA);
        t = Tipo();
        id = jj_consume_token(IDENTIFICADOR);
                                                lista.add(new Declaracion(Tipo.DECLARACION,id.image, null, t, id.beginLine, id.beginColumn));
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
     {if (true) return lista;}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Imprimir() throws ParseException {
 Instruccion e;
    jj_consume_token(IMPRIMIR);
    jj_consume_token(PARIZ);
    e = Expresion();
    jj_consume_token(PARDE);
    jj_consume_token(PCOMA);
                                                      {if (true) return new Imprimir(Tipo.IMPRIMIR, e,token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Asignacion() throws ParseException {
 Instruccion e; Token id; ArrayList<Instruccion> lista = new ArrayList<Instruccion>();
    id = jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARIZ:
      jj_consume_token(PARIZ);
      lista = Lista_Expresiones();
      jj_consume_token(PARDE);
      jj_consume_token(PCOMA);
                {if (true) return new Llamada(Tipo.LLAMADA, id.image, lista, id.beginLine, id.beginColumn);}
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(IGUAL);
    e = Expresion();
    jj_consume_token(PCOMA);
                                     {if (true) return new Asignacion(Tipo.ASIGNACION, id.image, e, id.beginLine, id.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Declaracion() throws ParseException {
 Tipo t; Token tok; Instruccion e = null;
    t = Tipo();
    tok = jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
      jj_consume_token(IGUAL);
      e = Expresion();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(PCOMA);
                                                                         {if (true) return new Declaracion(Tipo.DECLARACION,tok.image, e, t, tok.beginLine, tok.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Instruccion Retorno() throws ParseException {
 Instruccion e = null;
    jj_consume_token(RETORNO);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTERO:
    case DECIMAL:
    case TRUE:
    case FALSE:
    case PARIZ:
    case MENOS:
    case NOT:
    case IDENTIFICADOR:
    case STRING:
      e = Expresion();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(PCOMA);
                                            {if (true) return new Retorno(Tipo.RETORNO, e, token.beginLine, token.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Tipo FuncionTipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
           {if (true) return Tipo.ENTERO;}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
                {if (true) return Tipo.DECIMAL;}
      break;
    case CADENA:
      jj_consume_token(CADENA);
                {if (true) return Tipo.CADENA;}
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
                 {if (true) return Tipo.BOOLEAN;}
      break;
    case VOID:
      jj_consume_token(VOID);
              {if (true) return Tipo.VOID;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Tipo Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
           {if (true) return Tipo.ENTERO;}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
                {if (true) return Tipo.DECIMAL;}
      break;
    case CADENA:
      jj_consume_token(CADENA);
                {if (true) return Tipo.CADENA;}
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
                 {if (true) return Tipo.BOOLEAN;}
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

